# ops-copilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  ecosystem-smoke.yml  install.yml  publish.yml  smoke.yml
docs/: agent-maintenance.md  architecture.md  codex-maintenance.md  demo.md  incident-fixtures.md  maintenance-workflows.md  release-process.md  security-model.md  server.md  threat-model.md  toolpacks.md  why-ops-copilot.md  writing-tools.md
docs/assets/: ops-copilot-demo.cast
examples/: custom_tool.py  local_demo.py  orchestrated_demo.py  replay_incident.py  run_agent.py  tools.yaml
examples/incidents/: bad-env-var.yaml  bad-environment-variable.yaml  certificate-expiry.yaml  disk-full.yaml  docker-restart-loop.yaml  failing-deploy.yaml  failing-systemd-service.yaml  high-cpu.yaml  high-memory.yaml  slow-api.yaml
examples/toolpacks/: docker.yaml  linux-host.yaml  nginx.yaml  systemd.yaml
scripts/: create-release.sh  prepare-release.py  record_demo.sh  run-pypi-install-check.sh  smoke.py  validate-release.sh
src/ops_copilot/: __init__.py  audit.py  cli.py  graph.py  replay.py  report.py  sanitizers.py  secrets.py  server.py  session.py  ssh.py
src/ops_copilot/tools/: __init__.py  base.py  executor.py  policy.py  registry.py  review.py  shell.py
tests/: test_executor.py  test_graph.py  test_registry.py  test_review.py  test_sanitizers.py  test_secrets.py  test_server.py
