[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-copilot"
version = "0.1.6"
description = "Self-hosted SRE investigation copilot with YAML tools, SSH execution, SSE streaming, and secret redaction."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Benjamin Jornet", email = "benjamin.jornet@gmail.com" }]
keywords = ["sre", "ops", "langgraph", "ssh", "llm", "incident-response"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "asyncssh>=2.14",
    "langchain-content-normalizer>=0.1.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.scripts]
ops-copilot = "ops_copilot.cli:main"

[tool.uv.sources]
langchain-content-normalizer = { git = "https://github.com/BenjaminJornet/langchain-content-normalizer.git", branch = "main" }

[project.optional-dependencies]
openai = ["langchain-openai>=0.2"]
ollama = ["langchain-community>=0.3"]
server = ["fastapi>=0.115", "sse-starlette>=2", "uvicorn>=0.32"]

[project.urls]
Homepage = "https://github.com/benjaminjornet/ops-copilot"
Issues = "https://github.com/benjaminjornet/ops-copilot/issues"
Documentation = "https://github.com/BenjaminJornet/ops-copilot#readme"
Changelog = "https://github.com/BenjaminJornet/ops-copilot/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/ops-copilot/"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "httpx2>=0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "fastapi>=0.115",
    "sse-starlette>=2",
    "pybreaker>=1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ops_copilot"]
artifacts = ["src/ops_copilot/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:langchain_core.callbacks.manager",
]
